Draft Artikel AOS

--- a/themes/zalepik/layouts/partials/profile_writer.html
+++ b/themes/zalepik/layouts/partials/profile_writer.html
@@ -78,43 +78,43 @@
     }
     else if (zfooter_writer == "Heri"){
         for (let i = 0; i < zimg_profile.length; i++) {
-            zimg_profile[i].src = "https://mzainulmuttaqin.github.io/Zalepik_Images/logo-color-small-zen.png";
+            zimg_profile[i].src = "https://heriwahyudiono.github.io/profil/";
           }
         for (let i = 0; i < zwriter_city.length; i++) {
-        zwriter_city[i].innerHTML = "Jombang, Jawa Timur";
+        zwriter_city[i].innerHTML = "Bandar Lampung";
           }
         for (let i = 0; i < zwriter_role.length; i++) {
-            zwriter_role[i].innerHTML = "UI/UX Engineer";
+            zwriter_role[i].innerHTML = "FrontEnd Developer | Mahasiswa";
           }
         for (let i = 0; i < zwriter_cv.length; i++) {
-            zwriter_cv[i].href = "https://drive.google.com/file/d/1IR81NLALAMVY6_8opslZWABZ68OBdejr/view?usp=sharing";
+            zwriter_cv[i].href = "https://heriwahyudiono.github.io/cv/";
         }
         for (let i = 0; i < zwriter_social_dribbble.length; i++) {
-            zwriter_social_dribbble[i].href = "https://www.dribbble.com/zalepik";
+            zwriter_social_dribbble[i].href = "";
         }
         for (let i = 0; i < zwriter_social_linkedin.length; i++) {
-            zwriter_social_linkedin[i].href = "https://www.linkedin.com/in/moh-zainul-muttaqin-zalepik-52382a171/";
+            zwriter_social_linkedin[i].href = "";
         }
         for (let i = 0; i < zwriter_social_behance.length; i++) {
-            zwriter_social_behance[i].href = "https://www.behance.net/zalepik";
+            zwriter_social_behance[i].href = "";
         }
         for (let i = 0; i < zwriter_social_whatsapp.length; i++) {
-            zwriter_social_whatsapp[i].href = "https://api.whatsapp.com/send?phone=6281330876992&amp;text=&amp;source=&amp;data=";
+            zwriter_social_whatsapp[i].href = "https://wa.me/6285609839193";
         }
         for (let i = 0; i < zwriter_social_instagram.length; i++) {
-            zwriter_social_instagram[i].href = "https://www.instagram.com/zalepik_studio/";
+            zwriter_social_instagram[i].href = "https://instagram.com/heri.wahyudiono";
         }
         for (let i = 0; i < zwriter_social_facebook.length; i++) {
             zwriter_social_facebook[i].href = "";
         }
         for (let i = 0; i < zwriter_social_email.length; i++) {
-            zwriter_social_email[i].href = "mailto:" + "mzainulmuttaqin@outlook.com";
+            zwriter_social_email[i].href = "mailto:" + "heriwhydiono@gmail.com";
         }
         for (let i = 0; i < zwriter_social_email_span.length; i++) {
             zwriter_social_email_span[i].innerHTML = "mzainulmuttaqin@outlook.com";
         }
         for (let i = 0; i < zwriter_social_phone.length; i++) {
-            zwriter_social_phone[i].href = "tel:6285720075826";
+            zwriter_social_phone[i].href = "tel:6285609839193";
         }
         for (let i = 0; i < zwriter_social_phone_span.length; i++) {
             zwriter_social_phone_span[i].innerHTML = "+" + "6285720075826";
@@ -123,7 +123,7 @@
             zwriter_social_twitter[i].href = "";
         }
         for (let i = 0; i < zwriter_social_github.length; i++) {
-            zwriter_social_github[i].href = "https://github.com/mzainulmuttaqin/";
+            zwriter_social_github[i].href = "https://github.com/heriwahyudiono";
         }
         for (let i = 0; i < zwriter_social_upwork.length; i++) {
             zwriter_social_upwork[i].href = "";
