--- a/themes/zalepik/layouts/partials/profile_writer.html
+++ b/themes/zalepik/layouts/partials/profile_writer.html
@@ -78,7 +78,7 @@
     }
     else if (zfooter_writer == "Heri"){
         for (let i = 0; i < zimg_profile.length; i++) {
-            zimg_profile[i].src = "https://heriwahyudiono.github.io/profil/";
+            zimg_profile[i].src = "https://mzainulmuttaqin.github.io/Zalepik_Images/profiles/zalepik_writer_Heri_Wahyudiono.png";
           }
         for (let i = 0; i < zwriter_city.length; i++) {
         zwriter_city[i].innerHTML = "Bandar Lampung";
