--- a/themes/zalepik/layouts/partials/header.html
+++ b/themes/zalepik/layouts/partials/header.html
@@ -116,7 +116,7 @@
                     <div id="zcontent_paper_top_penulis">
                         <div>
                             <a href="{{ .Site.BaseURL }}artikel/{{ .Params.writer }}">
-                                <img src="{{ .Params.banner }}" alt="" srcset="">
+                                <img src="" alt="" srcset="" class="zimg_profile">
                             </a>
                         </div>
                         <div>
