--- a/themes/zalepik/layouts/partials/popup_ebook.html
+++ b/themes/zalepik/layouts/partials/popup_ebook.html
@@ -1,4 +1,4 @@
-<div id="zpopup_ebook" style="position:fixed; display="none">
+<div id="zpopup_ebook" style="position:fixed; display:none">
     <a id="zclose_ebook" onclick="zclose_ebook()">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
     </a>
