--- a/themes/zalepik/layouts/partials/head.html
+++ b/themes/zalepik/layouts/partials/head.html
@@ -43,3 +43,13 @@
 {{ else }}
     <meta name="description" content="{{ .Site.Params.Description }}"/>
 {{ end }}  
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHMEH4HT62"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XHMEH4HT62');
+</script>
