--- a/themes/zalepik/layouts/index.html
+++ b/themes/zalepik/layouts/index.html
@@ -188,7 +188,7 @@
           Website lengkap untuk bisnis/perusahaan Anda. Berisi halaman beranda, profil, produk/layanan, galeri, dll.
         </div>
         <div class="zalepik_mulai_dari py-12">Mulai dari:</div>
-        <h3>Rp. 1 JT</h3>
+        <h3>Rp. 1,5 JT</h3>
         <div><div
             class="zalepik_button_blue py-4 px-10 zalepik_button_banner_home mx-auto inset-x-0 w-56 text-center rounded-lg"
             >Pesan Sekarang</div></div>
@@ -208,7 +208,7 @@
           Instagram shopping!
         </div>
         <div class="zalepik_mulai_dari py-12">Mulai dari:</div>
-        <h3>Rp. 1,3 JT</h3>
+        <h3>Rp. 1,5 JT</h3>
         <div><div
             class="zalepik_button_blue text-blue py-4 px-10 zalepik_button_banner_home mx-auto inset-x-0 w-56 text-center rounded-lg"
             >Pesan Sekarang</div></div>
@@ -450,6 +450,10 @@
     </div>
   </div>
 </div>
+
+<!-- Pertanyaan -->
+{{- partial "pertanyaan.html" . -}}
+<!-- End Pertanyaan -->
 
 <!-- Layanan Kami -->
 <div id="title_header_home" class="zalepik_wrap_large_area text-center grid grid-cols-12">
