--- a/themes/zalepik/layouts/index.html
+++ b/themes/zalepik/layouts/index.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
 <!-- Main -->
 <main>
+  <div class="w-full">
+    <img class="sm:px-32 px-4 sm:pt-20 pt-32 w-full" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_zalepik_bisnis_melesat_website_hebat.png" alt="" srcset="">
+  </div>
   <div class="zalepik_wrap_title_section">
     <div id="title_header_home" class="zalepik_wrap_large_area text-center">
       <h1 class="col-start-1 col-end-13 zalepik_title_border zalepik_title_shadow_2"
@@ -146,7 +149,7 @@
   </div>
 
   <div id="software"
-    class="zalepik_price_list col-start-1 col-end-13 grid grid-cols-12 gap-8 sm:py-8 sm:px-32 sm:mx-10 mx-2 rounded-3xl text-center">
+    class="zalepik_price_list justify-center col-start-1 col-end-13 grid grid-cols-12 gap-8 sm:py-8 sm:px-32 sm:mx-10 mx-2 rounded-3xl text-center">
     <div id="title_header_home" class="zalepik_wrap_large_area text-center zalepik_title_harga">
       <h1 class="col-start-1 col-end-13 zalepik_title_border sm:mb-2 mb-0 zalepik_title_shadow_2 no_after"
         title="Pilih Paket & Harga">Pilih Paket & Harga</h1>
@@ -157,7 +160,7 @@
         diperlukan untuk bisnis anda. Silahkan hubungi kami melalui whatsapp, terkadang kami memiliki promo diskon.
       </div>
     </div>
-    <a class="sm:col-start-1 sm:col-end-5 col-start-1 col-end-7 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
+    <a class="sm:col-start-1 sm:col-end-5 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-landing-page.png"
           alt="">
@@ -175,7 +178,7 @@
             class="zalepik_button_blue py-4 px-10 zalepik_button_banner_home mx-auto inset-x-0 w-56 text-center rounded-lg">Pesan Sekarang</div></div>
       </div>
     </a>
-    <a class="sm:col-start-5 sm:col-end-9 col-start-7 col-end-13 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
+    <a class="sm:col-start-5 sm:col-end-9 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-company-profile.png"
           alt="">
@@ -194,7 +197,7 @@
             >Pesan Sekarang</div></div>
       </div>
     </a>
-    <a class="zalepik_hightlight zalepik_cta sm:col-start-9 sm:col-end-13 col-start-1 col-end-7 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
+    <a class="zalepik_hightlight zalepik_cta sm:col-start-9 sm:col-end-13 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-online-shop_2.png"
           alt="">
@@ -214,7 +217,7 @@
             >Pesan Sekarang</div></div>
       </div>
     </a>
-    <a class="sm:col-start-3 sm:col-end-7 col-start-7 col-end-13 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
+    <a class="sm:col-start-3 sm:col-end-7 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-illustration-online-course_2.png" alt="">
@@ -234,7 +237,7 @@
             >Pesan Sekarang</div></div>
       </div>
     </a>
-    <a class="sm:col-start-7 sm:col-end-11 col-start-1 col-end-7 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
+    <a class="sm:col-start-7 sm:col-end-11 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-interactive-website.png" alt="">
@@ -265,7 +268,7 @@
         title="MENGAPA MEMILIH JASA KAMI?">Mengapa Memilih Jasa Kami?</h1>
     </div>
     <a
-      class="sm:col-start-1 sm:col-end-5 col-start-1 col-end-7 bg-white sm:rounded-tl-3xl rounded-tl-xl py-4 sm:px-8 px-4">
+      class="sm:col-start-1 sm:col-end-5 col-start-1 col-end-7 bg-white sm:rounded-tl-3xl rounded-tl-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Team Profesional.svg" alt="">
@@ -278,20 +281,20 @@
       </div>
     </a>
     <a
-      class="sm:col-start-5 sm:col-end-9 col-start-7 col-end-13 bg-white sm:rounded-none rounded-tr-xl py-4 sm:px-8 px-4">
+      class="sm:col-start-5 sm:col-end-9 col-start-7 col-end-13 bg-white sm:rounded-none rounded-tr-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Support Terbaik.svg" alt="">
       </div>
       <div>
         <h1>
-          <b>Support Terbaik</b>
+          <b>Bantuan Tinggi</b>
         </h1>
         <div>Dukungan penuh dari masa project masih building sampai project selesai dikerjakan.</div>
       </div>
     </a>
     <a
-      class="sm:col-start-9 sm:col-end-13 col-start-1 col-end-7 bg-white sm:rounded-tr-3xl rounded-none py-4 sm:px-8 px-4">
+      class="sm:col-start-9 sm:col-end-13 col-start-1 col-end-7 bg-white sm:rounded-tr-3xl rounded-none py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Keamanan Terjamin.svg" alt="">
@@ -305,7 +308,7 @@
       </div>
     </a>
     <a
-      class="sm:col-start-1 sm:col-end-5 col-start-7 col-end-13 bg-white sm:rounded-bl-3xl rounded-none py-4 sm:px-8 px-4">
+      class="sm:col-start-1 sm:col-end-5 col-start-7 col-end-13 bg-white sm:rounded-bl-3xl rounded-none py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Pelayanan Ramah & Menyenangkan.svg"
@@ -319,7 +322,7 @@
       </div>
     </a>
     <a
-      class="sm:col-start-5 sm:col-end-9 col-start-1 col-end-7 bg-white sm:rounded-none rounded-bl-xl py-4 sm:px-8 px-4">
+      class="sm:col-start-5 sm:col-end-9 col-start-1 col-end-7 bg-white sm:rounded-none rounded-bl-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Desain Berkualitas.svg" alt="">
@@ -332,7 +335,7 @@
       </div>
     </a>
     <a
-      class="sm:col-start-9 sm:col-end-13 col-start-7 col-end-13 bg-white sm:rounded-br-3xl rounded-br-xl py-4 sm:px-8 px-4">
+      class="sm:col-start-9 sm:col-end-13 col-start-7 col-end-13 bg-white sm:rounded-br-3xl rounded-br-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
           src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Banyak Gratisnya!k.svg" alt="">
@@ -437,6 +440,9 @@
 
 <div id="software"
   class="mt-32 col-start-1 col-end-13 grid grid-cols-12 gap-2 z_bg_gradient sm:p-8 p-2 sm:mx-10 mx-2 rounded-3xl text-center">
+  <div class="col-start-1 col-end-13">
+  <img class="sm:rounded-xl rounded-2xl" style="width: 100%; margin: 0px !important; max-width: 100%;" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_zalepik_success.png" alt="" srcset="">
+</div>
   <div id="title_header_home" class="zalepik_wrap_large_area text-center">
     <h1 class="col-start-1 col-end-13 zalepik_title_border zalepik_title_shadow_2 text-white"
       title="KAMI MEMAHAMI, KESUKSESAN BISNIS ANDA DI Dunia DIGITAL SANGATLAH BERHARGA!">Kami memahami, Kesuksesan
