--- a/themes/zalepik/static/css/tailwind/custom.css
+++ b/themes/zalepik/static/css/tailwind/custom.css
@@ -1041,7 +1041,273 @@
     fill: white !important;
 }
 
+iframe{
+    border: 8px solid #FFBA00;
+    border-radius: 24px;
+}
+
+#zcontent_right #zcontent_right_download_ebook{
+    display: none !important;
+}
+
+.z_bg_gradient{
+    background: linear-gradient(110.01deg, #25D5E8 33.69%, #437BFF 73.59%);
+}
+
+.zalepik_button_yellow{
+    background-color: #FFBA00;
+}
+
+.zalepik_button_yellow:hover{
+    background-color: #FFBA00;
+}
+
+.z_bg_gradient .zalepik_button_cyan{
+    background: #25D5E8 !important;
+}
+
+.zalepik_small_list_card_icon img,
+#software.zalepik_small_list_card_icon img{
+  width: 96px !important;
+  margin-bottom: 16px !important;
+}
+
+.zalepik_small_list_card_icon h1{
+  color: #364250;
+  margin-bottom: 8px !important;
+}
+
+.zalepik_small_list_card_icon a div div{
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .zalepik_small_list_card_icon a{
+    padding: 32px;
+    border-radius: 24px;
+  }
+
+  .bg-cyan_gray_light{
+    background: rgba(237, 239, 248, 0.24);
+  }
+
+  .zalepik_list_mengapa_pilih_kami a h1{
+    color: #364250;
+    margin-bottom: 8px !important;
+}
+
+.zalepik_list_mengapa_pilih_kami a div div{
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.zalepik_title_card_list{
+    color:#364250;
+}
+
+.zalepik_price_list b{
+    font-size: 18px;
+}
+
+.zalepik_price_list h3{
+    font-size: 32px;
+    font-weight: 600;
+    color:#FFBA00
+}
+
+.zalepik_price_list a.bg-white{
+    box-shadow: 0px 8px 80px rgba(54, 66, 80, 0.08);
+}
+
+.zalepik_price_list a.bg-white.zalepik_hightlight{
+    box-shadow: 0px 8px 80px rgba(37, 213, 232, 0.4) !important;
+    background-color: #437BFF !important;
+}
+
+.zalepik_price_list a.bg-white.zalepik_hightlight h3{
+    text-shadow: 0px 2px 0px rgba(255, 255, 255, 1), 0px -2px 0px rgba(255, 255, 255, 1),
+    2px 0px 0px rgba(255, 255, 255, 1), 0px -2px 0px rgba(255, 255, 255, 1),
+    2px 2px 0px rgba(255, 255, 255, 1), 2px -2px 0px rgba(255, 255, 255, 1),
+    -2px 2px 0px rgba(255, 255, 255, 1), -2px -2px 0px rgba(255, 255, 255, 1) !important;
+    font-weight: 800 !important;
+}
+
+.zalepik_price_list a.bg-white.zalepik_hightlight,
+.zalepik_price_list a.bg-white.zalepik_hightlight div{
+    color: white;
+}
+
+.zalepik_price_list a.bg-white.zalepik_hightlight b,
+.zalepik_price_list a.bg-white.zalepik_hightlight h1{
+    color: white !important;
+}
+
+.zalepik_price_list a.bg-white.zalepik_hightlight div div{
+    opacity: 0.88;
+}
+
+.zalepik_price_list a.bg-white.zalepik_hightlight .zalepik_title_card_list{
+    color:#364250;
+    padding-bottom: 24px !important;
+}
+ 
+.zalepik_price_list a.bg-white div div{
+    padding-top: 12px !important;
+}
+
+.zalepik_list_mengapa_pilih_kami a img{
+    margin-bottom: 0px !important;
+    width: 104px !important;
+}
+
+.zalepik_list_mengapa_pilih_kami #title_header_home{
+    z-index: 1;
+}
+
+.zalepik_title_harga.zalepik_wrap_large_area{
+    padding-bottom: 56px !important
+}
+
+#software.zalepik_price_list a>div>img{
+    border-radius: 16px !important;
+}
+
+#software.zalepik_price_list .bg-white.rounded-3xl{
+    padding-top: 32px !important;
+    padding-bottom: 32px;
+}
+
+.zalepik_price_list{
+    background: url(https://mzainulmuttaqin.github.io/Zalepik_Images/img_bg_pricelist.svg);
+    background-size: cover;
+}
+
+#software #title_header_home{
+    z-index: 1 !important;
+}
+
+.zalepik_mulai_dari{
+    padding-top: 48px !important;
+    padding-bottom: 12px !important;
+    color: #437BFF;
+    font-size: 14px !important;
+}
+
+.zalepik_hightlight .zalepik_button_blue{
+    background: white;
+    color: #437BFF !important;
+    opacity: 1 !important;
+}
+
+.zalepik_price_list.zalepik_cta a.bg-white.zalepik_hightlight div.zalepik_button_blue{
+    color: #437BFF !important;
+}
+
+.z_bg_gradient .zalepik_title_border:before{
+    opacity: 0.24
+}
+
+.z_bg_gradient p{
+    padding-top: 24px;
+    line-height: 20px
+}
+
+#clients{
+    row-gap: 56px !important;
+}
+/* Pertanyaan */
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+  .accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .panel {
+    padding: 0 18px;
+    background-color: hsla(0, 0%, 100%, 0.8);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    backdrop-filter: blur(24px);
+    margin: 4px 0px 0px 0px;
+  }
+
+  #zalepik_pertanyaan .accordion{
+    border-radius: 12px;
+    background: white;
+    border: 2px solid #437BFF00;
+    color: #437BFF;
+    font-weight: 800;
+    font-size: 20px;
+  }
+
+  
+  #zalepik_pertanyaan .accordion{
+    border-radius: 12px;
+    background: white;
+    border: 2px solid #437BFF00;
+    color: #437BFF;
+    box-shadow: 0 12px 32px -4px rgba(37, 213, 232, 0.72);
+  }
+
+  #zalepik_pertanyaan .panel{
+    margin-bottom: 40px;
+    border-radius: 12px;
+  }
+
+  #zalepik_pertanyaan .panel p{
+    padding: 20px 24px;
+    line-height: 24px;
+    color: #364250;
+  }
+
+  #zalepik_pertanyaan .panel:last-child{
+    margin-bottom: 0px;
+  }
+
+  #zalepik_pertanyaan{
+    background: url(https://mzainulmuttaqin.github.io/Zalepik_Images/img_bg_pertanyaan.svg);
+    background-size: cover;
+    padding-bottom: 80px;
+    margin-top: 80px;
+  }
+
+  #zalepik_pertanyaan .zalepik_title_border{
+    z-index: 1;
+  }
+
+  /* End Pertanyaan */
+
 @media (max-width: 768px) {
+    .zalepik_title_border,
+    .zalepik_title_border::before{
+        font-size: 36px;
+    }
+
     #zcontent_left{
         display: none;
     }
@@ -1242,219 +1508,26 @@
         left: 0;
         margin: auto;
     }
+
+    .z_bg_gradient .zalepik_title_border{
+        font-size: 32px !important;
+        line-height: 36px !important;
+    }
+
+    .z_bg_gradient .zalepik_title_border::before{
+        font-size: 32px !important;
+        line-height: 36px !important;
+    }
+    
+    #zalepik_pertanyaan .panel p{
+        padding: 20px 0px;
+    }
+    
+    #zalepik_pertanyaan .panel{
+        margin-bottom: 20px;
+    }
+
+    .z_bg_gradient .zalepik_wrap_large_area{
+        padding-top: 24px !important;
+    }
 }
-
-iframe{
-    border: 8px solid #FFBA00;
-    border-radius: 24px;
-}
-
-#zcontent_right #zcontent_right_download_ebook{
-    display: none !important;
-}
-
-.z_bg_gradient{
-    background: linear-gradient(110.01deg, #25D5E8 33.69%, #437BFF 73.59%);
-}
-
-.zalepik_button_yellow{
-    background-color: #FFBA00;
-}
-
-.zalepik_button_yellow:hover{
-    background-color: #FFBA00;
-}
-
-.z_bg_gradient .zalepik_button_cyan{
-    background: #25D5E8 !important;
-}
-
-.zalepik_small_list_card_icon img,
-#software.zalepik_small_list_card_icon img{
-  width: 96px !important;
-  margin-bottom: 16px !important;
-}
-
-.zalepik_small_list_card_icon h1{
-  color: #364250;
-  margin-bottom: 8px !important;
-}
-
-.zalepik_small_list_card_icon a div div{
-    font-size: 14px;
-    line-height: 20px;
-  }
-
-  .zalepik_small_list_card_icon a{
-    padding: 32px;
-    border-radius: 24px;
-  }
-
-  .bg-cyan_gray_light{
-    background: rgba(237, 239, 248, 0.24);
-  }
-
-  .zalepik_list_mengapa_pilih_kami a h1{
-    color: #364250;
-    margin-bottom: 8px !important;
-}
-
-.zalepik_list_mengapa_pilih_kami a div div{
-    font-size: 14px;
-    line-height: 20px;
-}
-
-.zalepik_title_card_list{
-    color:#364250;
-}
-
-.zalepik_price_list b{
-    font-size: 18px;
-}
-
-.zalepik_price_list h3{
-    font-size: 32px;
-    font-weight: 600;
-    color:#FFBA00
-}
-
-.zalepik_price_list a.bg-white{
-    box-shadow: 0px 8px 80px rgba(54, 66, 80, 0.08);
-}
-
-.zalepik_price_list a.bg-white.zalepik_hightlight{
-    box-shadow: 0px 8px 80px rgba(37, 213, 232, 0.4) !important;
-    background-color: #437BFF !important;
-}
-
-.zalepik_price_list a.bg-white.zalepik_hightlight h3{
-    text-shadow: 0px 2px 0px rgba(255, 255, 255, 1), 0px -2px 0px rgba(255, 255, 255, 1),
-    2px 0px 0px rgba(255, 255, 255, 1), 0px -2px 0px rgba(255, 255, 255, 1),
-    2px 2px 0px rgba(255, 255, 255, 1), 2px -2px 0px rgba(255, 255, 255, 1),
-    -2px 2px 0px rgba(255, 255, 255, 1), -2px -2px 0px rgba(255, 255, 255, 1) !important;
-    font-weight: 800 !important;
-}
-
-.zalepik_price_list a.bg-white.zalepik_hightlight,
-.zalepik_price_list a.bg-white.zalepik_hightlight div{
-    color: white;
-}
-
-.zalepik_price_list a.bg-white.zalepik_hightlight b,
-.zalepik_price_list a.bg-white.zalepik_hightlight h1{
-    color: white !important;
-}
-
-.zalepik_price_list a.bg-white.zalepik_hightlight div div{
-    opacity: 0.88;
-}
-
-.zalepik_price_list a.bg-white.zalepik_hightlight .zalepik_title_card_list{
-    color:#364250;
-    padding-bottom: 24px !important;
-}
- 
-.zalepik_price_list a.bg-white div div{
-    padding-top: 12px !important;
-}
-
-.zalepik_list_mengapa_pilih_kami a img{
-    margin-bottom: 0px !important;
-    width: 104px !important;
-}
-
-.zalepik_list_mengapa_pilih_kami #title_header_home{
-    z-index: 1;
-}
-
-.zalepik_title_harga.zalepik_wrap_large_area{
-    padding-bottom: 56px !important
-}
-
-#software.zalepik_price_list a>div>img{
-    border-radius: 16px !important;
-}
-
-#software.zalepik_price_list .bg-white.rounded-3xl{
-    padding-top: 32px !important;
-    padding-bottom: 32px;
-}
-
-.zalepik_price_list{
-    background: url(https://mzainulmuttaqin.github.io/Zalepik_Images/img_bg_pricelist.svg);
-    background-size: cover;
-}
-
-#software #title_header_home{
-    z-index: 1 !important;
-}
-
-.zalepik_mulai_dari{
-    padding-top: 48px !important;
-    padding-bottom: 12px !important;
-    color: #437BFF;
-    font-size: 14px !important;
-}
-
-.zalepik_hightlight .zalepik_button_blue{
-    background: white;
-    color: #437BFF !important;
-    opacity: 1 !important;
-}
-
-.zalepik_price_list.zalepik_cta a.bg-white.zalepik_hightlight div.zalepik_button_blue{
-    color: #437BFF !important;
-}
-
-.z_bg_gradient .zalepik_title_border:before{
-    opacity: 0.24
-}
-
-.z_bg_gradient p{
-    padding-top: 24px;
-    line-height: 20px
-}
-
-#clients{
-    row-gap: 56px !important;
-}
-
-/* Pertanyaan */
-
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
-    background-color: #ccc;
-  }
-  
-  .accordion:after {
-    content: '\002B';
-    color: #777;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
-  }
-  
-  .active:after {
-    content: "\2212";
-  }
-  
-  .panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-  }
-  /* End Pertanyaan */
